Update: Fixed issue with text overspill on different resolutions

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -497,7 +497,7 @@ body {
         border-color: #545D27;
         color: #545D27;
         font-weight: bold;
-        font-size: 1em;
+        font-size: 0.9em;
         border-top-right-radius: 90px;
         border-bottom-right-radius: 90px;
         line-height: 0.75;
@@ -546,7 +546,7 @@ body {
         border-color: #798539;
         color: #798539;
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: 0.8em;
         border-top-right-radius: 90px;
         border-bottom-right-radius: 90px;
         line-height: 0.75;
